# kronosKVM

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
artifacts/: README.md
backend/: README.md  __init__.py
backend/app/: __init__.py  config.py  logging.py  main.py
backend/tests/: test_api.py  test_python_compatibility.py  test_serial.py
config/: kronoskvm.example.toml  kronoskvm.example.yaml  ports.example.yaml  serial-profiles.example.yaml
config/systemd/: README.md
deploy/ansible/: README.md
deploy/docker/: daemon.json
docs/: api.md  architecture.md  base-os.md  containerization.md  decisions.md  development-plan.md  hardware-inventory.md  hardware.md  implementation-log.md  network-design.md  os-migration.md  physical-port-map.md  port-plan.md  security.md  serial-console.md  troubleshooting.md  usb-gadget.md  video-capture.md  virtual-media.md
frontend/: README.md
hardware/: README.md
scripts/: bootstrap.sh  configure-capture.sh  configure-firewall.sh  configure-network.sh  configure-serial.sh  configure-ssh.sh  configure-usb-gadget.sh  health-check.sh  install-cli.sh  install-containers.sh  install-dependencies.sh  install-services.sh  install.sh  inventory.sh  kronoskvm  remote-inventory.sh  rollback-containers.sh  rollback-network.sh  start-containers.sh  stop-containers.sh  update-current-os.sh  verify-base-os.sh
systemd/: kronoskvm.service
tests/: test_app.py  test_cli_assets.py  test_container_assets.py
(+50 files in other folders)
