[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kronoskvm"
version = "0.1.0"
description = "IP-KVM control service for Raspberry Pi CM4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-aiohttp>=1.0,<2",
    "ruff>=0.5,<1",
]

[project.scripts]
kronoskvm = "kronoskvm.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kronoskvm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
