[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kronoskvm"
version = "0.1.0"
description = "Portable infrastructure-management appliance by KronosDX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.7,<3",
    "pyserial>=3.5,<4",
    "PyYAML>=6,<7",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
